# bita

./: Cargo.toml  sickan.out
.github/workflows/: rust-tls.yml
bitar/: Cargo.toml
bitar/src/: archive.rs  test.txt
bitar/src/archive_reader/: http_reader.rs  mod.rs
bitar/tests/: request_proxy.rs  reqwest_bson_file.rs  reqwest_get_file.rs  reqwest_hyper_proxy.rs  reqwest_start_hyper.rs  tokio_flow.rs
examples/: compress-cmd.rs  in-place-cloner.rs  local-cloner.rs
src/: cli.rs  clone_cmd.rs  compress_cmd.rs  head_cmd.rs  lib.rs  main.rs
